--- a/casestudies/135/casestudy/www/layout/case_id_135_id_292_c_bio.html
+++ b/casestudies/135/casestudy/www/layout/case_id_135_id_292_c_bio.html
@@ -1,48 +1,60 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Ma Jun | Publishing Pollution Data in China: Ma Jun and the Institute of Public and Environmental Affairs
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Ma Jun | Publishing Pollution Data in China: Ma Jun and the Institute of Public and Environmental Affairs
 	- A Journalism Case Study
-
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -50,17 +62,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -76,317 +85,265 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/135/180-02586_Ma Jun_EB_NJ_v1.0.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_135.html" title="Home"><span>Biography: Ma Jun</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_135.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_979.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_980.html">Becoming an environmentalist</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_981.html">Obstacles to enforcement</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_982.html">“We must fight with data”</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_983.html">China Pollution Maps launched</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_984.html">Taking on supply chains</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_985.html">Pollution Information Transparency Index</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_986.html">Tainted milk, heavy metals—and more</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_987.html">Poison Apple</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_988.html">Green investment</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_989.html">Blueprint for blue skies</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_990.html">Real-time data begins</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_991.html">Real-time dilemma</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_992.html">Appendix 1</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_993.html">Appendix 2</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_994.html">Appendix 3</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_135_id_995.html">Appendix 4</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/135/Ma&#32;Jun&#32;final.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_135.html">Home</a></div>		
-		<h1 class="title">Biography: Ma&nbsp;Jun</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:right;padding:10px">
-	<br />
-	<p class="caption">
-		&nbsp;</p>
-</div>
-<div style="float:right;padding:10px">
-	<img src="../../files/photos/1111/MJ_HeadShot.jpg" style="height: 294px; width: 250px;" /></div>
-<p align="left">
-	Ma Jun founded the Institute of Public and Environmental Affairs (IPE), a nonprofit dedicated to making pollution information accessible, in Beijing in 2006. Prior to launching IPE, Ma worked as a journalist with the <em>South China Morning Post</em>, a Hong Kong-based English language newspaper, from 1993 to 2000, and then as an environmental consultant with Sinosphere Corporation. He wrote <em>China&rsquo;s Water Crisis</em>, a landmark book published in 1999 that brought the consequences of unfettered development to public attention.</p>
-<p>
-	<i>Ma Jun on informing the public</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/411/majunbio.mp3" /></p>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/135/180-02586_Ma Jun_EB_NJ_v1.0.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_135.html" title="Home">
+         <span>
+          Biography: Ma Jun
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_135.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_979.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_980.html">
+          Becoming an environmentalist
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_981.html">
+          Obstacles to enforcement
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_982.html">
+          “We must fight with data”
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_983.html">
+          China Pollution Maps launched
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_984.html">
+          Taking on supply chains
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_985.html">
+          Pollution Information Transparency Index
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_986.html">
+          Tainted milk, heavy metals—and more
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_987.html">
+          Poison Apple
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_988.html">
+          Green investment
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_989.html">
+          Blueprint for blue skies
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_990.html">
+          Real-time data begins
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_991.html">
+          Real-time dilemma
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_992.html">
+          Appendix 1
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_993.html">
+          Appendix 2
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_994.html">
+          Appendix 3
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_995.html">
+          Appendix 4
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  class="active"  href="case_id_135_id_292_c_bio.html">Ma&nbsp;Jun</a></li>
-
-<li class="leaf"><a  href="case_id_135_id_293_c_bio.html">Gu&nbsp;Beibei</a></li>
-
-<li class="leaf"><a  href="case_id_135_id_294_c_bio.html">Matthew&nbsp;Collins</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/135/Ma Jun final.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_135.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Ma Jun
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:right;padding:10px">
+         <br/>
+         <p class="caption">
+         </p>
+        </div>
+        <div style="float:right;padding:10px">
+         <img src="../../files/photos/1111/MJ_HeadShot.jpg" style="height: 294px; width: 250px;"/>
+        </div>
+        <p align="left">
+         Ma Jun founded the Institute of Public and Environmental Affairs (IPE), a nonprofit dedicated to making pollution information accessible, in Beijing in 2006. Prior to launching IPE, Ma worked as a journalist with the
+         <em>
+          South China Morning Post
+         </em>
+         , a Hong Kong-based English language newspaper, from 1993 to 2000, and then as an environmental consultant with Sinosphere Corporation. He wrote
+         <em>
+          China’s Water Crisis
+         </em>
+         , a landmark book published in 1999 that brought the consequences of unfettered development to public attention.
+        </p>
+        <p>
+         <i>
+          Ma Jun on informing the public
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/411/majunbio.mp3"/>-->
+         <audio controls><source src="../../files/audios/411/majunbio.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a class="active" href="case_id_135_id_292_c_bio.html">
+          Ma Jun
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_293_c_bio.html">
+          Gu Beibei
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_135_id_294_c_bio.html">
+          Matthew Collins
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
