--- a/casestudies/129/casestudy/www/layout/case_id_129_id_265_c_bio.html
+++ b/casestudies/129/casestudy/www/layout/case_id_129_id_265_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: John Geddes | Salvation or Mirage? The New York Times Paywall
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: John Geddes | Salvation or Mirage? The New York Times Paywall
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,249 +84,255 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/129/180-02484_NYT-Paywall_EB_NJ_v2.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_129.html" title="Home"><span>Biography: John Geddes</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_129.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_909.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_910.html">NYTimes business</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_911.html">Online</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_912.html">Getting serious about online</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_913.html">TimesSelect</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_914.html">First-ever staff cuts</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_915.html">Can we make online pay?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_129_id_916.html">The big bet</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/129/NYT&#32;Paywall&#32;final&#32;061814.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_129.html">Home</a></div>		
-		<h1 class="title">Biography: John&nbsp;Geddes</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content">
-	<div style="float:right;padding:10px">
-		<img src="../../files/photos/946/Geddes-190.jpg" /><br />
-		<p class="caption">
-			&copy; New York Times<br />
-			John Geddes</p>
-	</div>
-	<p class="p1">
-		John Geddes was managing editor of the <em>New York Times</em> from September 2003 and during the period of the paywall decision in 2009. He joined the <em>Times</em> in 1994 as its business editor after working for the <em>Wall Street Journal</em> for 13 years.</p>
-	<p>
-		<i>Geddes on launching new technology.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/375/GeddesHumanInterest.mp3" /></p>
-</div>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/129/180-02484_NYT-Paywall_EB_NJ_v2.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_129.html" title="Home">
+         <span>
+          Biography: John Geddes
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_129.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_909.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_910.html">
+          NYTimes business
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_911.html">
+          Online
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_912.html">
+          Getting serious about online
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_913.html">
+          TimesSelect
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_914.html">
+          First-ever staff cuts
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_915.html">
+          Can we make online pay?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_129_id_916.html">
+          The big bet
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  class="active"  href="case_id_129_id_265_c_bio.html">John&nbsp;Geddes</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_266_c_bio.html">Bill&nbsp;Keller</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_267_c_bio.html">Jonathan&nbsp;Landman</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_268_c_bio.html">Rich&nbsp;Meislin</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_269_c_bio.html">Martin&nbsp;Nisenholtz</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_270_c_bio.html">Andy&nbsp;Rosenthal</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_271_c_bio.html">Vivian&nbsp;Schiller</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_273_c_bio.html">Arthur&nbsp;Ochs Sulzberger, Jr.</a></li>
-
-<li class="leaf"><a  href="case_id_129_id_274_c_bio.html">Denise&nbsp;Warren</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/129/NYT Paywall final 061814.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_129.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: John Geddes
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:right;padding:10px">
+         <img src="../../files/photos/946/Geddes-190.jpg"/>
+         <br/>
+         <p class="caption">
+          © New York Times
+          <br/>
+          John Geddes
+         </p>
+        </div>
+        <p class="p1">
+         John Geddes was managing editor of the
+         <em>
+          New York Times
+         </em>
+         from September 2003 and during the period of the paywall decision in 2009. He joined the
+         <em>
+          Times
+         </em>
+         in 1994 as its business editor after working for the
+         <em>
+          Wall Street Journal
+         </em>
+         for 13 years.
+        </p>
+        <p>
+         <i>
+          Geddes on launching new technology.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/375/GeddesHumanInterest.mp3"/>-->
+         <audio controls><source src="../../files/audios/375/GeddesHumanInterest.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="main" -->
+   </div>
+   <!-- id="contentbody" -->
+   <!-- Right sidebar for Bios -->
+   <div id="sidebar-right">
+    <div class="block block-menu" id="block-menu-65">
+     <h2 class="title">
+      Biographies
+     </h2>
+     <div class="content">
+      <ul class="menu">
+       <li class="leaf">
+        <a class="active" href="case_id_129_id_265_c_bio.html">
+         John Geddes
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_266_c_bio.html">
+         Bill Keller
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_267_c_bio.html">
+         Jonathan Landman
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_268_c_bio.html">
+         Rich Meislin
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_269_c_bio.html">
+         Martin Nisenholtz
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_270_c_bio.html">
+         Andy Rosenthal
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_271_c_bio.html">
+         Vivian Schiller
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_273_c_bio.html">
+         Arthur Ochs Sulzberger, Jr.
+        </a>
+       </li>
+       <li class="leaf">
+        <a href="case_id_129_id_274_c_bio.html">
+         Denise Warren
+        </a>
+       </li>
+      </ul>
+     </div>
+    </div>
+   </div>
+   <!-- id="sidebar-right" -->
+   <div class="visualclear">
+   </div>
+  </div>
+  <!-- id="pagebody" -->
+  <div id="footer">
+   <div id="footer-inner">
+    <div class="block block-menu" id="block-menu-66">
+     <h2 class="title">
+      System menu
+     </h2>
+     <div class="content">
+      <ul class="menu">
+       <li class="leaf">
+        <a href="http://www.journalism.columbia.edu">
+         © 2012 Columbia University Graduate School of Journalism
+        </a>
+       </li>
+      </ul>
+     </div>
+    </div>
+   </div>
+   <!-- id="footer-inner" -->
+  </div>
+  <!-- id="footer" -->
+ </body>
+</html>
+<!-- id="container" -->
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-try {
+ try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
-</html>
+} catch(err) {}
+</script>
